# muyu-todo

./: .gitignore  README.md  package-lock.json  package.json
.github/: build-trigger.txt
.github/workflows/: build-windows.yml
scripts/: dev-server.js
src/: app.js  index.html  logic.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop.rs  lib.rs  main.rs
tests/: logic.test.js
