[package]
name = "muyu-todo"
version = "1.0.1"
description = "A calm, translucent Windows desktop todo widget"
authors = ["Muyu Todo"]
edition = "2021"

[lib]
name = "muyu_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "MuyuTodo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
